# rl-insight

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check_doc_url.yml  check_pr_title.yml  pre_commit.yml  special_e2e.yml  unit_test.yml
data/summary_event_data/: summary_event_dataframe_sample.json
docs/: index.rst
docs/data/: data_specification.md
docs/developer_guides/: baseclusterparser_interface.md  extending_guide.md  memory_parser_guide.md  rule_extending_guide.md
docs/overview/: RL_Timeline_quickstart.md  architecture.md  gmm_heatmap_quickstart.md  memory_parser_quickstart.md
docs/utils/: mstx_preprocessing.md
examples/: gmm_exec.sh  mstx_exec.sh  nvtx_exec.sh  torch_profiler_exec.sh
experimental/: README.md  __init__.py  __main__.py  api.py  cli.py
experimental/client/: __init__.py  ray_monitor_client.py
experimental/collector/: __init__.py  ray_monitor_hub.py
experimental/config/: __init__.py  config.py
experimental/utils/: __init__.py  constants.py  opentelemetry_utils.py  prometheus_utils.py
rl_insight/: __init__.py  main.py
rl_insight/config/: __init__.py  config.py  config_loader.py  heatmap.yaml  timeline.yaml  utils.py
rl_insight/data/: __init__.py  data_checker.py  rules.py  verl_log_rules.py
rl_insight/parser/: __init__.py  gmm_parser.py  memory_parser.py  mstx_parser.py  nvtx_parser.py  parser.py  torch_parser.py
rl_insight/pipeline/: offline_insight_pipeline.py
rl_insight/utils/: mstx_preprocessing.py  (+1 more)
(+49 files in other folders)
