[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-insight"
version = "0.1.0"
description = "Performance insight tools for reinforcement learning frameworks."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "rl-insight contributors", email = "huxiaobo@zju.edu.cn" },
]
dependencies = [
  "numpy<2.0.0",
  "pandas",
  "plotly",
  "matplotlib",
  "pytest",
  "loguru",
  "ray",
  "omegaconf",
  "prometheus_client",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
  "pyyaml",
  "ijson",
]

[project.scripts]
rl-insight = "experimental.cli:main"

[project.urls]
Homepage = "https://github.com/verl-project/rl-insight"
Source = "https://github.com/verl-project/rl-insight"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_insight", "rl_insight.*", "experimental", "experimental.*"]

[tool.setuptools.package-data]
experimental = [
  "config/*.yaml",
  "config/*.yml",
  "config/*.ini",
  "config/services/*.yaml",
  "config/services/*.yml",
  "config/services/*.ini"
]

[tool.pytest.ini_options]
pythonpath = ["."]
